--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     src="https://cdn.pixabay.com/download/audio/2022/03/22/audio_7a574ba0ef.mp3?filename=error-126627.mp3"></audio>
 
   <footer class="footer">
-    <p>© <span id="ano"></span> Suzart (SOB EFOMM) e Arrogant Swami(Eu, XTRANHO DMS)</p>
+    <p>© <span id="ano"></span> Suzart (SOB EFOMM) e Eu (só uma polida)</p>
   </footer>
 
   <script>
